Layout Bug Fix

--- a/app/app.css
+++ b/app/app.css
@@ -2,7 +2,7 @@
 body {
     font-family:'robotoregular';
     background-color: #f5f5f5;
-    overflow:auto;
+    overflow:hidden;
 }
 
 ::-webkit-scrollbar {
@@ -500,7 +500,7 @@ select {
 .manager-view-header ul li {
     font-family: 'robotomedium';
     letter-spacing: 0.2px;
-    border-bottom: 1px solid #efefef;
+		margin-right: 5px;
 }
 
 .manager-view-header ul li a {
@@ -539,24 +539,18 @@ select {
 }
 
 @media (max-width: 1250px) {
-    .manager-view-header > ul > li > a {
-        padding: 13px 5px 15px 5px;
-    }
-    .manager-view-header .fa {
-        margin-right:5px;	
-    }
+
+
     .manager-view-header span.menu-text {
         /*font-size: 12px;*/
     }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1215px) {
     .manager-view-header span.menu-text {
         display:none;
     }
-    .manager-view-header > ul > li {
-        border-right: 1px solid #efefef;
-    }
+
 }
 
 @media (max-width: 767px) {
@@ -566,19 +560,15 @@ select {
 }
 
 @media (max-width: 600px) {
-    .manager-view-header .arrow {
-        display: none;
-    }
+
     .manager-view-header > ul > li > a {
-        padding: 13px 0px 15px 0px;
+        padding: 13px 0px 14px 0px;
     }
     .manager-view-header > ul > li {
         border-left: none;
         border-right: none;
     }
-    .manager-view-header .fa {
-        margin-right:7px;	
-    }
+
     .manager-view-header .dropdown-menu {
         position: fixed;
         top: 90px;
@@ -588,6 +578,7 @@ select {
 
 .manager-view-content {
     padding:25px 40px;
+		padding-bottom:100px;
     overflow:auto;
     -webkit-flex-grow: 1;
     flex-grow: 1;
@@ -3770,13 +3761,8 @@ table.dataTable thead .sorting:after {
 
     .manager-view-content {
         overflow:inherit;
-        padding-bottom:100px;
     }
 
-    body {
-        overflow:hidden;
-    }
-	
 	.sidebar-collapse-button {
 		display:none;	
 	}
